[package]
name = "fast-dhash"
version = "0.1.0"
edition = "2021"

description = "A fast rust implementation of the perceptual hash dhash"
license = "MIT"
readme = "README.md"
repository = "https://github.com/9elt/fast-dhash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
serde = { version = "1.0.158", features = ["derive"] }
