[package]
name = "fast-dhash"
version = "1.0.3"
edition = "2021"
description = "A fast rust implementation of the perceptual hash dhash"
license = "MIT"
readme = "README.md"
repository = "https://github.com/9elt/fast-dhash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
image = "0.25.5"
